--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "clevyr/laravel-simple-feedback-form",
+    "description": "A simple feedback form ",
     "keywords": [
-        ":vendor_name",
+        "Clevyr",
         "laravel",
-        ":package_slug"
+        "laravel-simple-feedback-form"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/clevyr/laravel-simple-feedback-form",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Adam Libby",
+            "email": "adam.libby@clevyr.com",
             "role": "Developer"
         }
     ],
@@ -35,13 +35,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Clevyr\\FeedbackForm\\": "src",
+            "Clevyr\\FeedbackForm\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Clevyr\\FeedbackForm\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -56,10 +56,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Clevyr\\FeedbackForm\\FeedbackFormServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "FeedbackForm": "Clevyr\\FeedbackForm\\Facades\\FeedbackForm"
             }
         }
     },
