--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": "^8",
+        "php": "^7.3|^8",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^8"
+        "illuminate/contracts": "^7.3|^8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
