--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8",
+        "php": "^7.3|^8.0",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^7.3|^8"
+        "illuminate/contracts": "^8"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.8",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
@@ -47,8 +46,7 @@
     "scripts": {
         "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "test-coverage": "vendor/bin/pest --coverage"
     },
     "config": {
         "sort-packages": true
