--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.4]
+        os: [ubuntu-latest]
+        php: [8.3, 8.4]
         laravel: [11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
